--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -4,7 +4,6 @@ navBar.next.title = >
 #0 is the url-ified part of the name entered by the user, 1 is a uuid
 #Naming convention: When using {1} the card is a member of a nameless list, when {0} a member of a named list
 card.name.url={0}
-card.content.menu= View actual {0} 
 
 card.aggregator.tag=sling:resourceType,jcr:primaryType
 card.name.title = Name
@@ -16,31 +15,23 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 editor.description=styledText
 editor.url=url
 
-
+menuitem.view.actual= View actual {0}s 
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Add new artifact
 
+#defaults used by several card types
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
 
 
-missing.tutorial.string=url
-
-
-detail.factory.loading.text = Loading
-
-#comma separated list
+#Fields not to be shown: comma separated list
 keys.hide = jcr:primaryType,sling:resourceType
 
 #for name 0 is the name 1 is camelCaseToPretty
 #for value 0 is the value 1 is size if it's a list 
-
 nt_unstructured.name = Folders
 nt_unstructured.value = {1}
-
-group.name = Groups 
-group.value = {1}
 
 button.ok.title = Ok
 button.cancel.title = Cancel
