--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/unrecognised.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/unrecognised.properties
@@ -1,7 +1,7 @@
 card.color=240,227,218
 card.title.color=245,205,180
 card.title.indent=30
-card.title.icon=artifact.advert
-unrecognised.image=artifact.advert
+card.title.icon=artifact.jarUnrecognised
+unrecognised.image=artifact.jarUnrecognised
 
 
