--- a/org.softwareFm.explorer.eclipse/build.properties
+++ b/org.softwareFm.explorer.eclipse/build.properties
@@ -1,4 +1,5 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           icons/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
