--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -3,6 +3,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.17-bin.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.jgit-1.1.0.201109151100-r.jar" sourcepath="lib/org.eclipse.jgit-1.1.0.201109151100-r-javadoc.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Externals/lib/org.eclipse.jgit-1.1.0.201109151100-r-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
