--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -15,4 +15,5 @@ bin.includes = META-INF/,\
                lib/twitter4j-core-2.2.4.jar,\
                lib/ant.jar,\
                lib/jdom.jar,\
-               lib/mysql-connector-java-5.1.17-bin.jar
+               lib/mysql-connector-java-5.1.17-bin.jar,\
+               lib/org.eclipse.jgit-1.1.0.201109151100-r.jar
