--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -8,6 +8,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Externals/lib/org.eclipse.jgit-1.1.0.201109151100-r-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="lib/jsch-0.1.44-1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/cake-forkjoin-0.1.jar"/>
