--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -16,4 +16,5 @@ bin.includes = META-INF/,\
                lib/ant.jar,\
                lib/jdom.jar,\
                lib/mysql-connector-java-5.1.17-bin.jar,\
-               lib/org.eclipse.jgit-1.1.0.201109151100-r.jar
+               lib/org.eclipse.jgit-1.1.0.201109151100-r.jar,\
+               lib/jsch-0.1.44-1.jar
