--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/ant.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.17-bin.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.jgit-1.1.0.201109151100-r.jar" sourcepath="lib/org.eclipse.jgit-1.1.0.201109151100-r-javadoc.jar">
+	<classpathentry exported="true" kind="lib" path="lib/org.eclipse.jgit-1.1.0.201109151100-r.jar" sourcepath="C:/Users/Phil/git/jgit/org.eclipse.jgit/src">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/Externals/lib/org.eclipse.jgit-1.1.0.201109151100-r-javadoc.jar!/"/>
 		</attributes>
