--- a/Externals/.classpath
+++ b/Externals/.classpath
@@ -9,7 +9,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="lib/jsch-0.1.44-1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/spring-jdbc-3.0.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-jdbc-3.0.5.RELEASE.jar" sourcepath="C:/Users/Phil/.m2/repository/org/springframework/spring-jdbc/3.0.5.RELEASE/spring-jdbc-3.0.5.RELEASE-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-dbcp-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.5.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring-beans-3.0.5.RELEASE.jar"/>
